--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.2.3",
   "description": "Woomy is a all-purpose discord bot built off the guidebot base and coded in node.js using discord.js.",
   "main": "index.js",
+   "engines": {
+    "node": "18.x"
+   },
   "dependencies": {
     "@discordjs/opus": "^0.5.0",
     "@sentry/node": "^6.4.1",
